<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:background="@color/white1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="142dp"
                android:layout_height="107dp"
                android:layout_marginLeft="220dp"
                android:src="@drawable/services"
                tools:ignore="RtlHardcoded"
                tools:layout_editor_absoluteX="257dp"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="40dp"
                android:text="@string/online"
                android:textColor="@color/Red"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="29dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="70dp"
                android:text="@string/pharmacy"
                android:textColor="@color/Red"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="64dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="230dp"
            android:layout_height="500dp"
            android:background="@drawable/left_panel_shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white1"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/loginpanel"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:background="@drawable/shape_login"
            android:layout_marginTop="60dp"
            android:paddingTop="60dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="vertical"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginemailcontainer"
                android:textColorHint="@color/Red"
                app:errorTextColor="@color/Red"
                app:placeholderTextColor="@color/white1"
                app:hintTextColor="@color/Red"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:textColorHint="@color/Red"
                    android:textColor="@color/Red"
                    android:inputType="textEmailAddress"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginpasswordcontainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/Red"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:counterTextColor="@color/Red"
                app:errorTextColor="@color/Red"
                app:hintTextColor="@color/Red"
                app:passwordToggleContentDescription="Hide passwod"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/Red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Password"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLength="16"
                    android:textColor="@color/Red"
                    android:textColorHint="@color/Red" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:gravity="right"
                android:textSize="18sp"
                android:textColor="@color/Red"
                android:layout_marginTop="5dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:backgroundTint="@color/Red"
            android:onClick="Login"
            android:text="@string/login"
            android:enabled="false"
            android:textColor="@color/white1"
            app:layout_constraintBottom_toBottomOf="@id/loginpanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="30dp"
            android:gravity="center"
            android:background="@color/white1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/Red"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Register"
                android:text="@string/sign_up"
                android:textColor="@color/Red"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

